# S3-Sim-Simulating-Humans-for-Personalized-Language-Modeling

./: .env.example  .gitignore  .gitmodules  CITATION.cff  LICENSE  README.md  pyproject.toml  run_deep_scenario_rollout.py  run_eval_qa.py  run_qa_construction.py  run_qa_rewrite.py  run_qc.py  run_rollout.py
data/: README.md
data/behavior_modes/: README.md  behavior_modes.jsonl
data/filterd_refined_profiles/: README.md  summary_refined_profiles_cn.jsonl  summary_refined_profiles_de.jsonl  summary_refined_profiles_in.jsonl  summary_refined_profiles_jp.jsonl  summary_refined_profiles_us.jsonl
data/initial_prompts/: README.md
data/rewritten_prompts/: README.md  original_rewritten_selected_prompts_us.jsonl
samples/: deep_scenario_full_sample.json  full_sample.json  full_sft_sample.jsonl
scripts/: assemble_final_release_dataset.py  declutter.py  dedupe_reorder_jsonl.py
tests/: conftest.py  fakes.py  test_ablation_config.py  test_assemble_final_release_dataset.py  test_behavior_block.py  test_behavior_block_unit.py  test_behavior_selection.py  test_dedupe_reorder_jsonl.py  test_eval_qa.py  test_parsing.py  test_qa.py  test_qc.py  test_sft_assembly.py  test_smoke_behavior_sampler_prompt.py
training/: README.md  __init__.py  assemble_sft.py
training/configs/: lora_qwen3_8b.yaml
user_simulator/: ablation.py  data.py  oracle.py  qa.py  sft.py
user_simulator/prompts/: __init__.py  assistant_oracle.yaml  assistant_vanilla.yaml  assistant_vanilla_with_profile.yaml  judge_persona_consistency.yaml  judge_profile_conflict.yaml  qa_bigtom.yaml  qa_lamp.yaml  (+14 more)
(+16 files in other folders)
